# fmw-torrador-qm-v3

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/common/: CMakeLists.txt  common.c
components/common/include/: common.h
components/esp_unicviewad/: CMakeLists.txt  esp_unicviewad.c
components/esp_unicviewad/include/: esp_unicviewad.h
components/max6675/: CMakeLists.txt  max6675.c
components/max6675/include/: max6675.h
components/qp-c/: CMakeLists.txt
components/server_controller/: CMakeLists.txt  server_controller.c
components/server_controller/include/: server_controller.h
components/storage/: CMakeLists.txt  storage.c
components/storage/include/: storage.h
main/: .fmw-torrador-v2  .fmw-torrador-v3  CMakeLists.txt  Kconfig.projbuild  bsp.c  data_broker.c  fmw-torrador-v3.qm  ihm.c  main.c  perif.c  sdkconfig  uart.c  utils.c
website/: package.json
website/src/: main.jsx  root.jsx
website/src/components/: LoteAreaChart.jsx
website/src/pages/: AllLotes.jsx  LoteDetails.jsx  ReceitaDetails.jsx
